# aptt

./: .gitignore  .pre-commit-config.yaml  CONV_REFACTORING_SUMMARY.md  DOCUMENTATION.md  DOCUMENTATION_REPORT.txt  DOCUMENTATION_SUMMARY.md  IMPORT_VALIDATION_REPORT.md  MODULE_READMES.md  QUICKSTART.md  README.md  README.md.backup  TEST_COVERAGE_REPORT.md  TEST_STRATEGY.md  pyproject.toml  pytest.ini  tatus  test_imports.py
.github/scripts/: check-version.sh  publish-with-twine.sh
.github/workflows/: publish.yml  quality.yml
aptt/callbacks/: base.py  tensor_rt.py  torchscript.py
aptt/config/: config_manager.py
aptt/heads/: box.py  centernet.py
aptt/layers/: bottleneck.py  complex.py  dft.py  hermite.py  laguerre.py
aptt/layers/attention/: __init__.py  kv_compression.py  mla.py  rope.py
aptt/lightning_base/: continual_learning_manager.py  module.py  trainer.py
aptt/lightning_base/dataset/: audio_loader.py  base_loader.py  image_loader.py  universal_set.py
aptt/loss/: __init__.py  bbox.py  centernet.py  classification.py  detection.py  dfl.py  distill.py  focal.py  keypoint.py  lwf.py  mel.py  rmse.py  segmentation.py  snr.py  varifocal.py
aptt/metric/: bbox_iou.py  confidence_matrix.py  norm.py  probiou.py
aptt/model/: backend_adapter.py  complex.py  conv.py  doa.py  polynomial.py  residual.py  rnn.py
aptt/model/beamforming/: beamforming.py
aptt/model/detection/: darknet.py  detection.py  efficient.py  head.py  mobile.py  resnet.py  yolo.py
aptt/model/feature/: darknet.py  efficientnet.py  fpn.py  mobile.py  resnet.py  wavenet.py
aptt/modul/: yolo.py
aptt/svm/: kernels.py  svm.py
aptt/tracker/: reid_encoder.py
aptt/utils/: array_calibration.py  autocast.py  complex.py  device.py  hermite.py  hw.py  image.py  laguerre.py  rnn.py  taskAlignedAssigner.py  teacher.py  tensor.py  tsignal.py  xy.py
docs/: CONV_ARCHITECTURE.md  INSTALL.md  PROJEKT_BERICHT.md  code_quality_report.md  coding_standards.md  conf.py  index.rst  llm_implementation_plan.md  llm_loss_head.md  llm_modules.md  modules_overview.md  moe.md  text_dataset.md  tracking_filters.md
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: index.doctree
docs/api/: callbacks.rst  config.rst  heads.rst  index.rst  layers.rst  lightning_base.rst  loss.rst  losses.rst  metrics.rst  models.rst  tracking.rst  utils.rst
docs/examples/: centernet.rst  tracking.rst  yolo.rst
docs/guides/: continual_learning.rst  detection.rst  getting_started.rst  training.rst
examples/: README.md  audio_beamforming.py  classification_training.py  coding_standards_example.py  continual_learning.py  llm_loss_head_example.py  llm_modules_example.py  moe_example.py  object_detection_inference.py  text_dataset_example.py  text_dataset_simple.py  tracking_device_benchmark.py
src/aptt/: README.md  __init__.py  typing.py
src/aptt/callbacks/: README.md  base.py  embedding_logger.py  tensor_rt.py  torchscript.py  tsne_laplace_callback.py
src/aptt/heads/: README.md  __init__.py  centernet.py  classification.py  heatmap.py  language_modeling.py
src/aptt/layers/: README.md  __init__.py  dft.py  hermite.py  laguerre.py  moe.py
src/aptt/lightning_base/: README.md  continual_learning_manager.py  module.py  trainer.py
src/aptt/lightning_base/dataset/: __init__.py  audio_loader.py  base_loader.py  image_loader.py  text_loader.py
src/aptt/loss/: README.md  __init__.py  bbox.py  centernet.py  classification.py  detection.py  dfl.py  distill.py  focal.py  heat.py  keypoint.py  lwf.py  mel.py  rmse.py  segmentation.py  snr.py  varifocal.py
src/aptt/metric/: README.md  bbox_iou.py  detection.py  map.py  probiou.py
src/aptt/model/: README.md  __init__.py  backend_adapter.py  complex.py  conv.py  doa.py  polynomial.py  residual.py  rnn.py  tracking.py
src/aptt/model/beamforming/: beamforming.py
src/aptt/model/detection/: centernet.py  darknet.py  detection.py  efficient.py  mobile.py  resnet.py  yolo.py
src/aptt/model/feature/: darknet.py  efficientnet.py  mobile.py  resnet.py  wavenet.py
src/aptt/modules/: README.md  __init__.py  centernet.py  deepseek.py  gpt.py  tracking.py  yolo.py
src/aptt/svm/: kernels.py  svm.py
src/aptt/tracker/: README.md  inference.py  rnn_tracker.py  tracker.py  tracker_manager.py
src/aptt/utils/: README.md  anchor.py  array_calibration.py  autocast.py  bbox.py  device.py  head_expansion.py  hermite.py  hw.py  search_space.py  summery.py  taskAlignedAssigner.py  tensor.py  xy.py
src/aptt/viz/: README.md  embedding.py
src/deepsuite/: __init__.py  registry.py  typing.py
src/deepsuite/callbacks/: tensor_rt.py  torchscript.py
src/deepsuite/heads/: classification.py
src/deepsuite/lightning_base/: module.py
src/deepsuite/lightning_base/dataset/: base_loader.py
src/deepsuite/loss/: bbox.py  detection.py  dfl.py  focal.py  heat.py  keypoint.py  lwf.py  mel.py  segmentation.py  varifocal.py
src/deepsuite/model/: autoencoder.py  discriminator.py
src/deepsuite/model/detection/: centernet.py  efficient.py  mobile.py  resnet.py
src/deepsuite/model/tracking/: tracking.py
src/deepsuite/tracker/: rnn_tracker.py  tracker.py
src/deepsuite/utils/: bbox.py  device.py  head_expansion.py  hermite.py  laguerre.py
tests/: __init__.py  conftest.py  test_base_loader.py  test_conv.py  test_export_base_callback.py  test_losses.py  test_mel_extractor.py  test_metrics.py  test_tensor_rt_export_callback.py  test_tracker.py  test_universal_dataset.py
